# fastrtc-chat

./: .gitignore  LICENSE  README.md  app.py  multilanguage.py  pyproject.toml  requirements.txt
fastrtc_chat/: __init__.py  app.py  google_tts.py  speech.py  translate.py
fastrtc_chat.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
tests/: test_config.py  test_google_tts.py  test_speech.py  test_translate.py
